--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,10 +1,10 @@
 name: Test Project
 
 on:
-  pull_request:
+  push:
     branches:
       - main
-
+#asdr
 jobs:
   test:
     runs-on: ubuntu-latest
